
06/09/2011 Changes

Pulled contribution. Now supporting Maven.
Modified maven pom to copy across 'extras' into target/redline-deploy/extras.
Changed runtime path to match where maven puts the runtime soruces.


03/09/2011 Changes

Added paths spec for Redline runtime so you can choose which runtime you want.


02/09/2011 Changes

Added command line argument parsing back into Redline.


29/08/2011 Changes

Implementing primitives.
Fixed bug preprocessing binary message patterns.


27/08/2011 Changes 

Continuing implementation of Stout and associated methods needed in Redline Runtime.
Adding handler for more arguments to methods. There is a limit.

26/08/2011 Changes

Implemented import. Moving onto further Stout functionality.


24/08/2011 Changes

Adding implementation of import: method.


21/08/2011 Changes

Adding ability to emit JVM bytecode from within a Smalltalk method.
Adding wrap and dispatch to Stout web framework.
Adding start of import from a namespace


15/08/2011 Changes

Cleaned up Exception handling so we don't nest causal exceptions that don't need nesting.
(smaller stack traces)


14/08/2011 Changes

Added example script calling a call. Shows up a need to handle exceptions a little better.
ie: when the script throws an exception, it looks like the class isnt found which isnt true.


13/08/2011 Changes

Removed a lot of trace - will put back later.
Continuing with implementing Runtime.


12/08/2011 Changes

Empty methods now answer receiver.
Changed message send when a class is invoked by stic to "main:"


11/08/2011 Changes

Added start of method analyser to handle setup of method bytecode writing.
Method compilation and dispatch to dynamically created methods working.
Primitives <primitive: xx> being called.
Implemented basicNew.


10/08/2011 Changes

Added trampoline of registering a method to be compiled and a message send to have method
compiled.


09/08/2011 Changes

Added support for requesting the compiling of methods.